<resources>
    <string name="app_name">genealogy_app</string>
    <!--these are for login activity-->
    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string> <!--password hint is also used in RegisterActivity -->
    <string name="login_button_label">Login</string>
    <string name="register_button_label">Register</string>
    <string name="mainActivity_divider">- or -</string>
    <!-- for register activity -->
    <string name="register_heading">Create New User</string>
    <string name="firstName_hint">First Name</string>
    <string name="middleName_hint">Middle Name (Optional)</string>
    <string name="lastName_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="location_hint">Location</string>
    <string name="bio_hint">Biography</string>
    <!-- for tabs in tablayout -->
    <string name="tab_home">home</string>
    <string name="tab_trees">trees</string>
    <string name="tab_profile">profile</string>


    <!-- for TreeList fragment -->
    <!-- for new tree dialog in TreeListFragment -->
    <string name="dialog_treeName_hint">Family Tree Name…</string>



<!-- for profile fragment -->
    <string name="profile_placeHolderName">Placeholder Name</string>
    <string name="profile_gender_placeholder">no gender specified</string>
    <string name="profile_bio_label">Biography：</string>
    <string name="profile_bio_placeholder">User has not written their bio</string>
    <string name="profile_location_placeholder">Location: Unknown</string>
    <string name="profile_dob_placeholder">DOB: Unknown</string>
    <string name="profile_logout_button_label">Logout</string>
    <string name="ancestor_s_first_name">Ancestor\'s First Name</string>
    <string name="change_ancestor">Change Ancestor</string>
    <string name="edit">Edit</string>
    <string name="ancestor_s_last_name">Ancestor\'s Last Name</string>


</resources>
