<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditProfileActivity">


    <LinearLayout
        android:id="@+id/edit_profile_form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/upload_hint_picture"
            android:id="@+id/edit_picture_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <EditText
            android:id="@+id/edit_first_name_field_profile"
            android:hint="@string/firstName_hint"
            android:inputType="text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>


        <EditText
            android:id="@+id/edit_last_name_field_profile"
            android:hint="@string/lastName_hint"
            android:inputType="text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edit_dob_field_profile"
            android:hint="@string/dob_hint"
            android:inputType="date"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edit_location_field_profile"
            android:hint="@string/location_hint"
            android:inputType="text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edit_bio_field_profile"
            android:hint="@string/bio_hint"
            android:inputType="textMultiLine"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>



        <Button
            android:id="@+id/submit_edit_button_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Submit Changes"
            android:layout_gravity="center"
            android:onClick="submitProfileEdits"
            />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>